client/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

.App {
    text-align: center;
}

.App-logo {
    height: 40vmin;
    pointer-events: none;
}

.App-header {
    background-color: #189ab4;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
    font-family: 'Poppins', sans-serif;
}

.App-link {
    color: #61dafb;
}

img {
    -drag: none;
    user-select: none;
    -webkit-user-drag: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.noselect {
    -webkit-user-drag: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
    overflow: hidden;
    font-family: 'Poppins';
}

#mood-selection, #error-button {
    padding: 7px;
    font-size: large;
    font-family: 'Poppins';
    background-color: white;
    color: #189ab4;
    border: none;
    border-radius: 4px;
    margin-top: 20px;
    width: 197px;
    transition: background-color 0.3s;
}

#mood-selection:hover, #error-button:hover {
    background-color: #0C6270;
    color: white;
}

#logo {
    width: 192px;
}

.App-header.dark {
    background-color: #0F3D4B;
}

#home-button.dark, #mood-selection.dark {
    color: #0F3D4B;
}

#home-button.dark:hover, #mood-selection.dark:hover {
    background-color: #0C6270;
    color: white;
}

